fix width on mobile

--- a/app/css/main.styl
+++ b/app/css/main.styl
@@ -7,7 +7,6 @@ canvas
 
 body
   background #000
-  overflow hidden
 
   &.loaded
     .loading
